# lynx-lang

./: .gitignore  Cargo.toml  README.md  changelog.md  coverage.sh  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
doc/: spec.md
example/: fibonacci.lynx  hello.lynx
src/: ast.rs  builtin.rs  env.rs  evaluator.rs  lexer.rs  lib.rs  object.rs  parser.rs  token.rs  util.rs
tests/: test.rs
