[package]
name = "lynx_lang"
description = "An educational project for learning how programming language is made."
version = "0.1.0"
authors = ["linc2046@gmail.com"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT"
homepage = "https://github.com/linc2046/lynx-lang"
repository = "https://github.com/linc2046/lynx-lang"
readme = "README.md"
keywords = ["learning", "parser", "language"]
categories = ["Compilers", "Parser implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
