[package]
name = "lynxlang"
description = "An educational project for learning how programming language is made."
version = "0.1.1"
authors = ["linc2046@gmail.com"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT"
homepage = "https://github.com/linc2046/lynx-lang"
repository = "https://github.com/linc2046/lynx-lang"
readme = "README.md"
keywords = ["learning", "parser", "language"]
categories = ["compilers", "parser-implementations"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
